# kerrighedize

./: .gitignore  Makefile.am  autogen.sh  clean.sh  configure.ac  kerrighedize
debian/: changelog  control  copyright  kerrighed-manager-applet.dirs  kerrighed-manager-applet.install  kerrighed-manager-applet.menu  kerrighed-manager.default  kerrighed-manager.dirs  kerrighed-manager.init  kerrighed-manager.install  kerrighedize.dirs  kerrighedize.install  rules
default-krg/: nfs-server.conf  pxelinux.conf  sshd.conf
default-root/: krgnfsroot
init-krg/: halt  network  reboot
init-root/: krgnfsroot
kerrighed-manager/: org.kerrighed.KerrighedManager.conf
kerrighed-manager/src/: kerrighed-applet  kerrighed-manager
lib/: bootloader  bootloader_debian  common  common_debian  dhcp  dhcp_debian  fake  fake_debian  install  log  misc  misc_debian  nfs  nfs_debian  packages_debian  pxe  pxe_debian  tftp  tftp_debian
var/: vars.check  vars.default  vars.msg
